--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
     <body>
         <div class="body">
              <!-- this is the header -->
-              <div>
-                <header>
-                    <div>
-                        <h1>NaijaKitchen</h1>
-                        <p style="color: black;">Nigerian Food Recipes</p>
-                    </div>
-                    <nav>
-                        <ul>
-                            <li>
-                                <select name="" id="">
-                                    <option value="Recipe">Recipes</option>
-                                    <option value="Recipe">Ingredients</option>
-                                    <option value="Recipe">Flavour</option>
-                                </select>
-                            </li>
-                            <a href="index.html"><li>Learn/How-To</li></a>
-                            <a href="index.html"><li>Traditional Dishes</li></a>
-                            <a href="index.html"><li>Food</li></a>
-                        </ul>
-                        <span>
-                            <button>Subscribe</button>
-                        </span>
-                    </nav>
+                <div>
+                    <header>
+                        <div>
+                            <h1>NijaKitchen</h1>
+                            <p id="p" style="color: black;">Nigerian Food Recipes</p>
+                        </div>
+                        <nav>  
+                            <ul>
+                                <li>
+                                    <select name="" id="">
+                                        <option value="Recipe">Recipes</option>
+                                        <option value="Recipe">Ingredients</option>
+                                        <option value="Recipe">Flavour</option>
+                                    </select>
+                                </li>
+                                <a href="index.html"><li>Learn/How-To</li></a>
+                                <a href="index.html"><li>Traditional Dishes</li></a>
+                                <a href="recipe.html"><li>Food</li></a>
+                            </ul>
+                            <span>
+                                <button>Subscribe</button>
+                            </span>
+                        </nav>
 
-                    <div id="mobile-menu" class="mobile-menu">
-                        <i class="mdi mdi-menu"></i>
-                    </div>
-                </header>
-              </div>
+                        <div id="mobile-menu" class="mobile-menu">
+                            <i class="mdi mdi-menu"></i>
+                        </div>
+                    </header>
+                </div>
 
-              <!-- this is the main page -->
+               <!-- this is the main page -->
                <main>
 
                     <!-- this is the hero section -->
@@ -340,7 +340,7 @@
                             </li>
                             <a href="index.html" id="aside-a"><li>Learn/How-To</li></a>
                             <a href="index.html" id="aside-a"><li>Seasonal Sensations</li></a>
-                            <a href="index.html" id="aside-a"><li>Shop</li></a>
+                            <a href="recipe.html" id="aside-a"><li>Food</li></a>
                         </ul>
                         <span id="subscribe-btn">
                             <button>Subscribe</button>
