--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                         </div>
                         <nav>  
                             <ul>
+                                <a href="index.html"><li>Home</li></a>
+                                <a href="food.html"><li>Food</li></a>
+                                <a href="recipe.html"><li>Recipe</li></a>
+                                <a href="project report.html"><li>Project Report</li></a>
                                 <li>
                                     <select name="" id="">
-                                        <option value="Recipe">Recipes</option>
                                         <option value="Recipe">Ingredients</option>
                                         <option value="Recipe">Flavour</option>
                                     </select>
                                 </li>
-                                <a href="index.html"><li>Learn/How-To</li></a>
-                                <a href="index.html"><li>Traditional Dishes</li></a>
-                                <a href="recipe.html"><li>Food</li></a>
                             </ul>
                             <span>
                                 <button>Subscribe</button>
@@ -331,16 +331,16 @@
                             <i class="mdi mdi-cancel" id="aside-nav-cancel"></i>
                         </div>
                         <ul class="aside-ul">
+                            <a href="index.html" id="aside-a"><li>Home</li></a>
+                            <a href="food.html" id="aside-a"><li>Food</li></a>
+                            <a href="recipe.html" id="aside-a"><li>Recipe</li></a>
+                            <a href="project report.html" id="aside-a"><li>Project Report</li></a>
                             <li>
                                 <select name="" id="" id="aside-a" class="select-aside">
-                                    <option value="Recipe">Recipe</option>
-                                    <option value="Recipe">Ingred</option>
+                                    <option value="Recipe">Ingredients</option>
                                     <option value="Recipe">Flavour</option>
                                 </select>
                             </li>
-                            <a href="index.html" id="aside-a"><li>Learn/How-To</li></a>
-                            <a href="index.html" id="aside-a"><li>Seasonal Sensations</li></a>
-                            <a href="recipe.html" id="aside-a"><li>Food</li></a>
                         </ul>
                         <span id="subscribe-btn">
                             <button>Subscribe</button>
