--- a/project report.html
+++ b/project report.html
@@ -43,87 +43,66 @@
                 <!-- this is the main food list page -->
                 <main class="main">
 
-                    <div class="search-box">
-                        <div class="search-recipe" id="search-box">
-                            <input type="text" placeholder="search your favourite recipe here" id="search-recipe">
-                            <div class="recipe-search-icon">
-                                <i id="recipe-search" class="mdi mdi-tag-search"></i>
-                            </div>
-                        </div>
-                    </div>
-
                     <section>
-                        <div class="trendy-section">
+                        <div class="report-section">
                            <div class="section-ttle-icon">
                                 <strong class="mdi mdi-arrow-collapse-horizontal"></strong>
                             </div>
-                            <h3>Food <b>Recipes</b></h3>
-                            <div class="recipe-trendy">
-                                <div class="trendy-recipe">
-                                    <img src="Images1/Akara1.jpeg" alt="Akara">
-                                    <h6 class="recipe-title">Akara (Bean Cakes)</h6>
-                                    <sub class="recipe-desc">Ingredients: Beans, pepper, onions, palm oil.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
+                            <h3>Project Report <b>Food Recipe Webpage</b></h3>
+                            <div id="report-container">
+                                <div class="report-head">
+                                    <h6 class="report-title">NijaKitchen - Nigerian Food Recipes</h6>
                                     </div>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/ofada rice2.jpeg" alt="Ofada Rice & Sauce">
-                                    <h6 class="recipe-title">Ofada Rice & Sauce</h6>
-                                    <sub class="recipe-desc">Ingredients: Ofada rice, palm oil, assorted meat, pepper mix.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="report-details">
+                                    <h6 class="recipe-title">Developers</h6>
+                                    <sub class="report-desc">Mustapha Olabode</sub>
+                                    <sub class="report-desc">Taiye Ogunleye</sub>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/Nsala soup1.jpeg" alt="Nsala Soup">
-                                    <h6 class="recipe-title">Nsala Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Catfish, yam, uziza, crayfish.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="report-details">
+                                    <h6 id="sub-report-title">Abstract</h6>
+                                    <label id="sub-report">This project presents the development of a <b>Food Recipe Webpage</b> designed as a frontend web development practice under the CWW Tech Africa program. The webpage showcases multiple recipes using a clean, responsive layout and provides a search functionality that allows users to filter recipes by title or description. The project was carried out collaboratively by two trainees, with the aim of strengthening practical skills in <b>HTML, CSS, JavaScript, and GitHub Pages deployment</b>.</label>
+                                    <label id="sub-report" style="margin-top: 0.1rem;">The outcome is a functional and responsive recipe website featuring a navigation bar, recipe cards, a dynamic search system, and a project report page. This project not only demonstrates technical proficiency in frontend development but also highlights teamwork, problem-solving, and effective project execution.</label>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/ogbono soup2.jpeg" alt="Ogbono Soup">
-                                    <h6 class="recipe-title">Ogbono Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Ogbono seeds, meat, stockfish, palm oil.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="report-details">
+                                    <h6 id="sub-report-title">Introduction</h6>
+                                    <label id="sub-report">This project is a simple yet functional <b>Food Recipe Webpage</b> designed as part of our training with <b>CWW Tech Africa. The primary goal was to practice "frontend web development skills."" </b>  by building a responsive webpage that displays different food recipes, incorporates a search functionality, and provides an engaging user interface. </label>
+                                    <label id="sub-report" style="margin-top: 0.1rem;">The project replicates a recipe template but was customized to demonstrate our understanding of <b>HTML, CSS, and JavaScript.</b></label>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/smoky jollofrice.jpeg" alt="">
-                                    <h6 class="recipe-title">Smoky Jollof Rice</h6>
-                                    <sub class="recipe-desc">Ingredients: Long-grain rice, fresh tomatoes, peppers, onions, and rich spices.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="report-details">
+                                    <h6 id="sub-report-title">Introduction</h6>
+                                    <label id="sub-report">The key objectives of the project were: </label>
+                                    <ol>
+                                        <li>To design and structure a webpage using<b>HTML5</b></li>
+                                        <li>To style the webpage and make it responsive using (Flexbox/Grid).  <b>CSS3</b></li>
+                                        <li>To implement <b>JavaScript functionality</b> for recipe search/filtering. </li>
+                                        <li>To practice teamwork and version control with GitHub Pages for hosting. </li>
+                                    </ol>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/suya sweres.jpeg" alt="">
-                                    <h6 class="recipe-title">Spicy Suya Skewers</h6>
-                                    <sub class="recipe-desc">Ingredients: Beef, suya spice mix, groundnut powder, and chili pepper.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="report-details details2">
+                                    <h6 id="sub-report-title">Tools and Technologies Used </h6>
+                                    <label id="sub-report"><b>HTML5:</b> for structuring the webpage. </label>
+                                    <label id="sub-report"><b>CSS3:</b> for styling, layout, and responsiveness. </label>
+                                    <label id="sub-report"><b>JavaScript:</b> for dynamic search/filter functionality. </label>
+                                    <label id="sub-report"><b>VS  Code:</b> as the code editor. </label>
+                                    <label id="sub-report"><b>GitHub:</b> for hosting and deployment. </label>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/Egusi 2.jpeg" alt="">
-                                    <h6 class="recipe-title">Egusi Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Melon seeds, spinach, palm oil, assorted meat, and crayfish.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
+                                <div class="report-details details2">
+                                    <h6 id="sub-report-title">Project Description </h6>
+                                    <label id="sub-report">The Food Recipe Webpage is structured into several main sections:  </label>
+                                    <ol>
+                                        <label id="sub-report">Header & Navigation Bar </label>
+                                        <li><b>Home:</b> Returns the user to the homepage.</li>
+                                        <li><b>Food:</b> Displays a page containing a collection of different meals.</li>
+                                        <li><b>Recipe:</b> Shows a page listing several food recipes along with their ingredients.</li>
+                                        <li><b>Project Report</b> Provides detailed information about the project, the developers, and the CWW Tech Africa program.</li>
+                                    </ol>
+                                    <div class="descr-project">
+                                        <ol>
+                                            <b> Hero Section / Search Bar </b>
+                                            <label id="sub-report">A top section with a search input field where users can search for recipes by title or description. </label>
+                                        </ol>
                                     </div>
-                                </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/pepper soup2.jpeg" alt="">
-                                    <h6 class="recipe-title">Pepper Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Catfish or goat meat, hot peppers, scent leaves, and local spices.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
-                                </div>
-                                <div class="no-results" id="noResults" role="status">No recipes match your search.</div>
                                 </div>
                             </div>
                             </div>
