--- a/food.html
+++ b/food.html
@@ -43,87 +43,93 @@
                 <!-- this is the main food list page -->
                 <main class="main">
 
-                    <div class="search-box">
+                    <!-- <div class="search-box">
                         <div class="search-recipe" id="search-box">
                             <input type="text" placeholder="search your favourite recipe here" id="search-recipe">
                             <div class="recipe-search-icon">
                                 <i id="recipe-search" class="mdi mdi-tag-search"></i>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <section>
                         <div class="trendy-section">
                            <div class="section-ttle-icon">
                                 <strong class="mdi mdi-arrow-collapse-horizontal"></strong>
                             </div>
-                            <h3>Food <b>Recipes</b></h3>
+                            <h3>Check Our <b>Food</b></h3>
                             <div class="recipe-trendy">
-                                <div class="trendy-recipe">
-                                    <img src="Images1/Akara1.jpeg" alt="Akara">
-                                    <h6 class="recipe-title">Akara (Bean Cakes)</h6>
-                                    <sub class="recipe-desc">Ingredients: Beans, pepper, onions, palm oil.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/jollof rice1.jpeg" alt="Jollof Rice" class="recipe-img">
+                                    <h4>Jollof Rice</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/ofada rice2.jpeg" alt="Ofada Rice & Sauce">
-                                    <h6 class="recipe-title">Ofada Rice & Sauce</h6>
-                                    <sub class="recipe-desc">Ingredients: Ofada rice, palm oil, assorted meat, pepper mix.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/Egusi 1.jpeg" alt="Egusi Soup" class="recipe-img">
+                                    <h4>Egusi Soup</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/Nsala soup1.jpeg" alt="Nsala Soup">
-                                    <h6 class="recipe-title">Nsala Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Catfish, yam, uziza, crayfish.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/suya2.jpeg" alt="Suya" class="recipe-img">
+                                    <h4>Suya</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/ogbono soup2.jpeg" alt="Ogbono Soup">
-                                    <h6 class="recipe-title">Ogbono Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Ogbono seeds, meat, stockfish, palm oil.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/moi-moi2.jpeg" alt="Moi Moi" class="recipe-img">
+                                    <h4>Moi Moi</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/smoky jollofrice.jpeg" alt="">
-                                    <h6 class="recipe-title">Smoky Jollof Rice</h6>
-                                    <sub class="recipe-desc">Ingredients: Long-grain rice, fresh tomatoes, peppers, onions, and rich spices.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/puff-puff2.jpeg" alt="Puff Puff" class="recipe-img">
+                                    <h4>Puff-Puff</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/suya sweres.jpeg" alt="">
-                                    <h6 class="recipe-title">Spicy Suya Skewers</h6>
-                                    <sub class="recipe-desc">Ingredients: Beef, suya spice mix, groundnut powder, and chili pepper.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/Efo-riro1.jpeg" alt="Efo Riro" class="recipe-img">
+                                    <h4>Efo Riro</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/Egusi 2.jpeg" alt="">
-                                    <h6 class="recipe-title">Egusi Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Melon seeds, spinach, palm oil, assorted meat, and crayfish.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/jollof rice1.jpeg" alt="Jollof Rice" class="recipe-img">
+                                    <h4>Jollof Rice</h4>
                                 </div>
-                                <div class="trendy-recipe">
-                                    <img src="Images1/pepper soup2.jpeg" alt="">
-                                    <h6 class="recipe-title">Pepper Soup</h6>
-                                    <sub class="recipe-desc">Ingredients: Catfish or goat meat, hot peppers, scent leaves, and local spices.</sub>
-                                    <div class="gallery-tag">
-                                        <u>Subscribe</u>
-                                    </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/Egusi 1.jpeg" alt="Egusi Soup" class="recipe-img">
+                                    <h4>Egusi Soup</h4>
                                 </div>
-                                <div class="no-results" id="noResults" role="status">No recipes match your search.</div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/suya2.jpeg" alt="Suya" class="recipe-img">
+                                    <h4>Suya</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/moi-moi2.jpeg" alt="Moi Moi" class="recipe-img">
+                                    <h4>Moi Moi</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/puff-puff2.jpeg" alt="Puff Puff" class="recipe-img">
+                                    <h4>Puff-Puff</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/Efo-riro1.jpeg" alt="Efo Riro" class="recipe-img">
+                                    <h4>Efo Riro</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/jollof rice1.jpeg" alt="Jollof Rice" class="recipe-img">
+                                    <h4>Jollof Rice</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/Egusi 1.jpeg" alt="Egusi Soup" class="recipe-img">
+                                    <h4>Egusi Soup</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/suya2.jpeg" alt="Suya" class="recipe-img">
+                                    <h4>Suya</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/moi-moi2.jpeg" alt="Moi Moi" class="recipe-img">
+                                    <h4>Moi Moi</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/puff-puff2.jpeg" alt="Puff Puff" class="recipe-img">
+                                    <h4>Puff-Puff</h4>
+                                </div>
+                                <div class="recipe-shop">
+                                    <img src="Images1/Efo-riro1.jpeg" alt="Efo Riro" class="recipe-img">
+                                    <h4>Efo Riro</h4>
                                 </div>
                             </div>
                             </div>
