--- a/project report.html
+++ b/project report.html
@@ -98,10 +98,10 @@
                         <div class="section-ttle-icon">
                             <strong class="mdi mdi-arrow-collapse-horizontal"></strong>
                         </div>
-                        <h3>Project Report <b>Food Recipe Webpage</b></h3>
+                        <h3>Project Report <b>Food Recipe Webpage:</b> Group 4</h3>
                         <div id="report-container">
                             <div class="report-head">
-                                <h6 class="report-title">NijaKitchen - Nigerian Food Recipes</h6>
+                                <h6 class="report-title">NijaKitchen - Nigerian Food Recipes <b>[Group 4]</b></h6>
                             </div>
                         </div>
                         <div class="report-details">
